<resources>
    <string name="app_name">Places</string>
    <string name="alert_button">Alert</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="modify">Modify</string>
    <string name="remove">Remove</string>
    <string name="distance">Distance</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="place">Place:</string>
    <string name="initial">Inital</string>
    <string name="ok">Ok</string>
    <string name="hello">Hello Android Developer</string>
    <string name="alert">Alert</string>
    <string-array name="place_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>