<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.Places.MainActivity">

    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:title="@string/add"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_modify"
        android:orderInCategory="100"
        android:title="@string/modify"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_remove"
        android:orderInCategory="100"
        android:title="@string/remove"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_distance"
        android:orderInCategory="100"
        android:title="@string/distance"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_initial"
        android:orderInCategory="100"
        android:title="@string/initial"
        app:showAsAction="never" />
</menu>